feat(spark): set up spark with sbt and scala